--- a/index.html
+++ b/index.html
@@ -8,11 +8,14 @@
   <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <title></title>
+    <title>БМУ ГЭМ</title>
     <meta name="description" content="" />
-
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link href="https://fonts.googleapis.com/css2?family=Lato&display=swap" rel="stylesheet">
+    <link rel="shortcut icon" href="/img/home.ico" type="image/x-icon" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Lato&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="css/main.css" />
   </head>
   <body>
@@ -22,13 +25,19 @@
         <a href="#">upgrade your browser</a> to improve your experience.
       </p>
     <![endif]-->
+
+    <!-- Nav Bar -->
+
     <nav
       class="navbar navbar-expand-lg navbar-light bg-light d-flex justify-content-around align-items-center pt-3 sticky-top"
     >
       <img src="img/logo.png" alt="logo" />
-
       <span class="navbar-text"> Тут контакты и важная инфа </span>
     </nav>
+
+    <!-- /Nav Bar -->
+
+    <!-- WELCOME -->
 
     <section class="welcome">
       <h1 class="mb-4 d-flex">
@@ -55,7 +64,11 @@
         «под ключ»
       </p>
     </section>
+
+    <!-- /WELCOME -->
     <hr />
+    <!-- PRODUCTS -->
+
     <section class="products text-center">
       <h2 class="mb-4 mt-4">Наша продукция</h2>
       <div class="product-cards">
@@ -149,6 +162,10 @@
       </div>
     </section>
 
+    <!-- /PRODUCTS -->
+
+    <!-- TYPES F BUILDINGS -->
+
     <section class="types text-center">
       <div class="types-text">
         <div class="text">
@@ -161,7 +178,6 @@
           </p>
         </div>
       </div>
-
       <div class="types-cards">
         <div class="container">
           <div class="row">
@@ -196,6 +212,9 @@
         </div>
       </div>
     </section>
+    <!-- TYPES F BUILDINGS -->
+
+    <!-- ABOUT COMPANY -->
 
     <section class="about">
       <div class="text text-center">
@@ -252,6 +271,9 @@
           </div>
         </div>
       </div>
+      <!-- ABOUT COMPANY -->
+
+      <!-- CERTIFICATION -->
 
       <div class="text-center">
         <h2 class="mt-5 mb-3">Сертификаты</h2>
@@ -261,6 +283,8 @@
         </div>
       </div>
     </section>
+
+    <!-- CERTIFICATION -->
 
     <!-- Footer -->
     <footer class="page-footer font-small">
@@ -276,6 +300,7 @@
     </footer>
     <!-- Footer -->
 
+    <!-- Scripts -->
     <script
       src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
       integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
@@ -291,5 +316,6 @@
       integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV"
       crossorigin="anonymous"
     ></script>
+    <!-- /Scripts -->
   </body>
 </html>
