--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <title>БМУ ГЭМ</title>
     <meta name="description" content="" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="shortcut icon" href="/img/home.ico" type="image" />
+    <link rel="shortcut icon" href="img/home.ico" type="image" />
     <link
       href="https://fonts.googleapis.com/css2?family=Lato&display=swap"
       rel="stylesheet"
