added meta description

--- a/index.html
+++ b/index.html
@@ -10,7 +10,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <link rel="shortcut icon" href="img/home.ico" type="image/x-icon" />
     <title>БМУ ГЭМ</title>
-    <meta name="description" content="" />
+    <meta
+      name="description"
+      content="Изготовим модульные здания
+    любого назначения и размера «под ключ»"
+    />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link
       href="https://fonts.googleapis.com/css2?family=Lato&display=swap"
