added meta description

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <link rel="shortcut icon" href="img/home.ico" type="image/x-icon" />
-    <title>БМУ ГЭМ</title>
+    <title>Братск-Монтаж</title>
     <meta
       name="description"
       content="Изготовим модульные здания
