updated  header info

--- a/index.html
+++ b/index.html
@@ -36,8 +36,14 @@
     <nav
       class="navbar navbar-expand-lg navbar-light bg-light d-flex justify-content-around align-items-center pt-3 sticky-top"
     >
-      <img src="img/logo.png" alt="logo" />
-      <span class="navbar-text"> Тут контакты и важная инфа </span>
+     <a href="https://bmugem.ru/" target=”_blank”><img src="img/logo.png" alt="logo" /></a>
+      <span class="navbar-text">Менеджер: Соболева Анастасия
+        <br>
+        тел. 8 (3953) 48-47-46 доб.310
+        <br> 
+        сот. 8 (983) 416-03-30
+        <br> 
+        e-mail: soboleva.as@bmugem.ru </span>
     </nav>
 
     <!-- /Nav Bar -->
