updated  header info

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
       class="navbar navbar-expand-lg navbar-light bg-light d-flex justify-content-around align-items-center pt-3 sticky-top"
     >
      <a href="https://bmugem.ru/" target=”_blank”><img src="img/logo.png" alt="logo" /></a>
-      <span class="navbar-text">Менеджер: Соболева Анастасия
+      <span class="navbar-text"> Менеджер: Анастасия Соболева
         <br>
         тел. 8 (3953) 48-47-46 доб.310
         <br> 
