updated  header info

--- a/index.html
+++ b/index.html
@@ -13,8 +13,7 @@
     <title>Братск-Монтаж</title>
     <meta
       name="description"
-      content="Изготовим модульные здания
-    любого назначения и размера «под ключ»"
+      content="Изготовим модульные здания любого назначения и размера «под ключ»"
     />
 
     <link
